--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "def output_at(list_of_terms, x_value):\n",
-    "    for \n",
+    "    for i in list_of_term\n",
     "    return list_of_terms[0]*input_value**term[1]\n",
     "    pass"
    ]
