--- a/index.ipynb
+++ b/index.ipynb
@@ -190,7 +190,7 @@
     "def output_at(list_of_terms, x_value):\n",
     "    c = 0\n",
     "    for i in list_of_terms:\n",
-    "        n = i[0]*input_value**term[1]\n",
+    "        n = i[0]*x_value**i[1]\n",
     "    pass"
    ]
   },
