Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,6 +191,8 @@
     "    c = 0\n",
     "    for i in list_of_terms:\n",
     "        n = i[0]*x_value**i[1]\n",
+    "        c += n\n",
+    "    return c\n",
     "    pass"
    ]
   },
